[KMP]Adapt to Kotlin Multiplatform project